fixed alignment bug

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -190,12 +190,5 @@ body {
 	#officer_pics {
 		list-style: none;
 
-		li {
-			width: 1350px;
-			overflow: hidden;
-			align-items: center;
-		}
-
-
 	}
 }
